--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -16,3 +16,8 @@ steps:
 - script: |
      npm install
   displayName: 'npm install and test'
+
+- script: |
+     echo SHA: $(Build.SourceVersion)
+     echo Full Branch: $(Build.SourceBranch)
+  
