Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -2,7 +2,7 @@
 # Upload any vulnerabilities back into my GitHub Repo for developer review.
 
 trigger:
-- master
+- main
 
 pool:
   vmImage: 'ubuntu-latest'
