Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -17,4 +17,24 @@ steps:
      npm install
   displayName: 'npm install and test'
 
+- script: |
+    wget https://github.com/github/codeql-action/releases/latest/download/codeql-runner-linux
+    chmod +x codeql-runner-linux
+  displayName: 'Get latest CodeQL package. Install on Agent.'
+
+- script: |
+    ./codeql-runner-linux init \
+    --repository n3wt0n/ScanGHfromAzDO \
+    --github-url https://github.com \
+    --github-auth $GITHUB_PAT \
+    --config-file .github/codeql/codeql-config.yml 
+  displayName: 'Initialize CodeQL Executable and create a CodeQL database'
   
+- script: |
+    ./codeql-runner-linux analyze \
+    --repository n3wt0n/ScanGHfromAzDO \
+    --github-url https://github.com \
+    --github-auth $GITHUB_PAT \
+    --commit $(Build.SourceVersion) \
+    --ref $(Build.SourceBranch)
+  displayName: 'Populate the CodeQL runner databases, analyze them, and upload the results to GitHub.'
