Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -26,7 +26,7 @@ steps:
     ./codeql-runner-linux init \
     --repository n3wt0n/ScanGHfromAzDO \
     --github-url https://github.com \
-    --github-auth $GITHUB_PAT \
+    --github-auth $(GITHUB_PAT) \
     --config-file .github/codeql/codeql-config.yml 
   displayName: 'Initialize CodeQL Executable and create a CodeQL database'
   
@@ -34,7 +34,7 @@ steps:
     ./codeql-runner-linux analyze \
     --repository n3wt0n/ScanGHfromAzDO \
     --github-url https://github.com \
-    --github-auth $GITHUB_PAT \
+    --github-auth $(GITHUB_PAT) \
     --commit $(Build.SourceVersion) \
     --ref $(Build.SourceBranch)
   displayName: 'Populate the CodeQL runner databases, analyze them, and upload the results to GitHub.'
